cabal-version:      2.4
name:               SvgIcons
version:            0.1.0.0
synopsis:           Svg Icons suitable for Reactjs

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ramiro
maintainer:         ramir659@icloud.com

-- A copyright notice.
-- copyright:
category:           Web
extra-source-files: CHANGELOG.md

library
  exposed-modules: 
    Base,
    Core,
    Geometry,
    Icons.Business,
    Icons.File,
    Icons.Human,
    Icons.Office,
    Icons.Textarea,
    Icons.Tools,
    Main,
    Mosaics,
    Render

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    
    base ^>=4.15.0.0,
    blaze-markup >=0.5 && <0.9,
    blaze-svg ^>= 0.3.3.0,
    data-default ^>= 0.7.0.0,
    directory ^>= 1.3.7.0,
    text ^>= 2.0
  hs-source-dirs:   src
  default-language: Haskell2010

executable SvgIcons-exe
  default-language: Haskell2010
  hs-source-dirs: src
  main-is: Main.hs
  build-depends:
    base ^>=4.15.0.0,
    blaze-markup >=0.5 && <0.9,
    blaze-svg ^>= 0.3.3.0,
    data-default ^>= 0.7.0.0,
    directory ^>= 1.3.7.0,
    text ^>= 2.0
  other-modules:
    Base,
    Core,
    Geometry,
    Icons.Business,
    Icons.File,
    Icons.Human,
    Icons.Office,
    Icons.Textarea,
    Icons.Tools,
    Mosaics,
    Render

test-suite SvgIcons-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          TestRender.hs
    build-depends:    
      base ^>=4.15.0.0,
      data-default ^>= 0.7.0.0,
      SvgIcons
